# PhantomForce

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Docs.md  Info.plist.in  README.md  install_hooks.sh
.github/workflows/: ci.yml
include/: Game.h  Object.h  Player.h  TileMap.h  platform_utils.h  utils.h
include/assets/: crate_img.h  player_img.h
include/menu/: Button.h  PauseOverlay.h
include/utils/: platform_utils.h  utils.h
scripts/: pre-commit
src/: Game.cpp  Game.h  Main.cpp  Map.cpp  Object.cpp  Player.cpp  TileMap.cpp  main.cpp
src/menu/: Button.cpp  PauseOverlay.cpp
